minor change in portfolio

--- a/index.html
+++ b/index.html
@@ -727,7 +727,7 @@ body.dark-mode .blog-post:hover {
       <div class="portfolio-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px;">
         <div class="portfolio-item" style= "padding: 15px;">
           <img src="images/HRMS ORANGE.PNG" alt="Project 1" style="width: 100%; height: 30%">
-          <h3 style="margin-top: 10px;">OrangeHRM - Automation Testing<</h3>
+          <h3 style="margin-top: 10px;" > OrangeHRM - Automation Testing</h3>
           <p>Orange HRM comes as a comprehensive solution for the efficient management and development of your Human Resource. It will assist you in the complex and strategic process of managing this crucial resource of your enterprise. Based on modular architecture, it facilitates a vast range of HR activities, with features that reflect the main HR management activities. It comes as a web-enabled application and considering the available flexibility, OrangeHRM is a perfect platform for reengineering your HR processes and achieving a new level of HR Management.</p>
           <p><strong>Client:</strong> OrangeHRM</p>
         </div>
