--- a/resume.html
+++ b/resume.html
@@ -252,6 +252,7 @@
       padding: 20px;
       box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
       max-width: 900px;
+      line-height: 20px;
     }
 
     body.dark-mode .resume-container {
@@ -378,6 +379,10 @@
 
 .dropdown:hover .dropdown-menu {
   display: block;
+}
+.date{
+  font-style: italic;
+  font-size: smaller;
 }
   </style>
 </head>
